# DeusExSofa

./: MIGRATION.md  README.md  pyproject.toml  tv.py
.swarm/: memory.db
src/deus_ex_sofa/: __init__.py  cli.py  client.py  config.py  constants.py  websocket.py
